fixed issues reported by sonar