@@ -15,7 +15,8 @@ package org.eclipse.fordiac.ide;
 import java.io.PrintWriter;
 import java.io.StringWriter;
 import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.util.Arrays;
 import java.util.concurrent.atomic.AtomicBoolean;
 
@@ -105,11 +106,10 @@ public class FordiacLogListener implements ILogListener {
 		try {
 			final IWorkbench wb = PlatformUI.getWorkbench();
 			final IWebBrowser browser = wb.getBrowserSupport().createBrowser(Activator.PLUGIN_ID);
-			browser.openURL(new URL(FORDIAC_IDE_ISSUE_URL));
-		} catch (PartInitException | MalformedURLException e) {
+			browser.openURL(new URI(FORDIAC_IDE_ISSUE_URL).toURL());
+		} catch (PartInitException | MalformedURLException | URISyntaxException e) {
 			FordiacLogHelper.logError("Error in opening the 4diac bugzilla web-page!", e); //$NON-NLS-1$
 		}
-
 	}
 
 }
